zmieniono:       main.py 	zmieniono nazwę: templates/style.css -> static/style.css 	zmieniono:       templates/index.html 	zmieniono:       templates/logowanie.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" href="style.css"/>
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
 <style>
 *{
 margin:0;
@@ -161,11 +161,11 @@ scale:1.1;
     <span> </span>
     <span> </span>
     <ul class="menu_list">
-      <a href="#"><li>Strona glowna</li></a>
+      <a href="/"><li>Strona glowna</li></a>
       <a href="#"><li>Formularz</li></a>
       <a href="#"><li>Wyniki</li></a>
       <a href="#"><li>O nas</li></a>
-	  <a href="#"><li id="log">Zaloguj się</li></a>
+	  <a href="/login"><li id="log">Zaloguj się</li></a>
 
   
 </div>
