--- a/templates/logowanie.html
+++ b/templates/logowanie.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="stylesheet" href="style.css"/>
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
 
 </head>
 <body>
@@ -11,11 +11,11 @@
     <span> </span>
     <span> </span>
     <ul class="menu_list">
-      <a href="#"><li>Strona glowna</li></a>
+      <a href="/"><li>Strona glowna</li></a>
       <a href="#"><li>Formularz</li></a>
       <a href="#"><li>Wyniki</li></a>
       <a href="#"><li>O nas</li></a>
-	  <a href="#"><li id="log">Zaloguj się</li></a>
+	  <a href="/login"><li id="log">Zaloguj się</li></a>
 
   
 </div>
