--- a/templates/rejestracja.html
+++ b/templates/rejestracja.html
@@ -25,12 +25,13 @@
 <div class="panel_logowania">
 
 <form>
-<p>Logowanie</p>
-<input class="pole" type="text" name="login" placeholder="Login"/>
+<p>Rejestracja</p>
+<input class="pole" type="text" name="nazwa_uzytkownika" placeholder="Nazwa użytkownika"/>
 <input class="pole" type="password" name="haslo" placeholder="Hasło"/>
-<input class="zaloguj_przycisk" type="submit" name="zaloguj_przycisk" value="Zaloguj"/>
+<input class="pole" type="password" name="haslo2" placeholder="Powtórz hasło"/>
+<input class="zaloguj_przycisk" type="submit" name="zarejestruj_przycisk" value="Zarejestruj się"/>
 
-<p class="zarejestrujsie">Nie masz konta? <a href="rejestracja.html" class="rejhref">Zarejestruj się</a></p>
+<p class="zarejestrujsie">Masz już konto? <a href="logowanie.html" class="rejhref">Zaloguj się</a></p>
 </form>
 
 
