zmieniono:       main.py 	nowy plik:       tables.sql 	zmieniono:       templates/index.html 	zmieniono:       templates/logowanie.html 	zmieniono:       templates/rejestracja.html

--- a/templates/logowanie.html
+++ b/templates/logowanie.html
@@ -31,7 +31,7 @@
 <input class="pole" type="password" name="haslo" placeholder="Hasło"/>
 <input class="zaloguj_przycisk" type="submit" name="zaloguj_przycisk" value="Zaloguj"/>
 
-<p class="zarejestrujsie">Nie masz konta? <a href="rejestracja.html" class="rejhref">Zarejestruj się</a></p>
+<p class="zarejestrujsie">Nie masz konta? <a href="/rejestracja" class="rejhref">Zarejestruj się</a></p>
 </form>
 
 
@@ -41,5 +41,5 @@
 
 <div class="footer">mikronapedy</div>
 
-<body>
+</body>
 </html>
