zmieniono:       templates/index.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@ color:#cdcdcd;
 font-family:sans-serif;
 list-style-type:none;
 }
-
+</style>
 </head>
 <body>
 
@@ -38,6 +38,7 @@ list-style-type:none;
       <a href="#"><li>Wyniki</li></a>
       <a href="#"><li>O nas</li></a>
 	  <a href="/login"><li id="log">Zaloguj się</li></a>
+	</ul>
 
   
 </div>
