zmieniono:       main.py 	zmieniono:       templates/index.html 	zmieniono:       templates/logowanie.html

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@ list-style-type:none;
 </style>
 </head>
 <body>
-
+{% block content %}
 <div class="navbar"> 
 	<input type="checkbox" checked="unckecked" />   
     <span> </span>
@@ -37,7 +37,11 @@ list-style-type:none;
       <a href="#"><li>Formularz</li></a>
       <a href="#"><li>Wyniki</li></a>
       <a href="#"><li>O nas</li></a>
+      {% if session['login'] %}
+      <a href="#"><li id="log">{{session['login']}}</li></a>	  
+	  {% else %}
 	  <a href="/login"><li id="log">Zaloguj się</li></a>
+	  {% endif %}
 	</ul>
 
   
@@ -47,6 +51,6 @@ list-style-type:none;
 </div>
 
 <div class="footer">mikronapedy</div>
-
+{% endblock %}
 </body>
 </html>
