--- a/templates/rejestracja.html
+++ b/templates/rejestracja.html
@@ -15,9 +15,10 @@
       <a href="#"><li>Formularz</li></a>
       <a href="#"><li>Wyniki</li></a>
       <a href="#"><li>O nas</li></a>
-	  <a href="logowanie.html"><li id="log">Zaloguj się</li></a>
-
-  
+	  <ul class="submenu_list">
+	  <a href="logowanie" id="logs"><li id="log">Zaloguj się</li></a>
+	  <a href="#" id="wylogujsie_przycisk"><li id="wylog">Wyloguj się</li></a>
+	  </ul>
 </div>
 <div class="content">
 
@@ -31,7 +32,8 @@
 <input class="pole" type="password" name="haslo2" placeholder="Powtórz hasło"/>
 <input class="zaloguj_przycisk" type="submit" name="zarejestruj_przycisk" value="Zarejestruj się"/>
 
-<p class="zarejestrujsie">Masz już konto? <a href="logowanie.html" class="rejhref">Zaloguj się</a></p>
+
+<p class="zarejestrujsie">Masz już konto? <a href="logowanie" class="rejhref">Zaloguj się</a></p>
 </form>
 
 
