--- a/templates/index.html
+++ b/templates/index.html
@@ -38,7 +38,9 @@ list-style-type:none;
       <a href="#"><li>Wyniki</li></a>
       <a href="#"><li>O nas</li></a>
       {% if session['login'] %}
-      <a href="#"><li id="log">{{session['login']}}</li></a>	  
+	  <a href="#" id="logs"><li id="log"><p style="color:tomato;">{{session['login']}}</p><ul class="submenu">
+	  <a href="/wyloguj" id="wylogujsie_przycisk"><li id="wylog">Wyloguj się</li></a>
+	  </ul>	</li></a>  
 	  {% else %}
 	  <a href="/login"><li id="log">Zaloguj się</li></a>
 	  {% endif %}
