--- a/templates/style.css
+++ b/templates/style.css
@@ -1,3 +1,4 @@
+html, body { height: 100% }
 *{
 margin:0;
 padding:0;
@@ -13,12 +14,12 @@ list-style-type:none;
 margin-top:20px;
 }
 .menu_list li{
-
 padding-top:8px;
 padding-bottom:8px;
 color:#cdcdcd;
 font-family:sans-serif;
 list-style-type:none;
+
 }
 
 #log{
@@ -173,6 +174,7 @@ background-color:tomato;
 }
 
 
+
 .panel_logowania form{
 	
 	width:100%;
@@ -187,22 +189,62 @@ background-color:tomato;
 	
 }
 
-#wylogujsie_przycisk{
+.submenu{
 	display:none;
 }
-#wylogujsie_przycisk:hover{
-	display:block;
-}
-#logs:hover ~ #wylogujsie_przycisk{
-	display:block;
+#wylog{
+	background-color:#272727;
+	width:170px;
+	margin-left:-10px;
+	font-weight:normal;
 	
+}
+#log:hover  .submenu{
+	display:block;
+	width:150px;clear:both;
+	background-color:272727;
+	margin-top:5px;
+	text-align:center;
+	width:190px; 
+
 
 }
+
+
+
 
 
 
 
 @media screen and (min-width: 768px) {
+.submenu{
+	display:none;
+}
+#wylog{
+	background-color:#272727;
+	width:170px;
+	margin-left:-10px;
+	font-weight:normal;
+}
+#log:hover  .submenu{
+	display:block;
+	width:150px;clear:both;
+	background-color:272727;
+	margin-top:5px;
+	text-align:center;
+	width:190px; 
+
+
+}
+#log{
+	width:150px;
+	
+	
+}
+p{
+	color:tomato;
+}
+
 .navbar input{
 display: none;
 }
@@ -212,17 +254,12 @@ display: none;
 }
 .navbar input:checked ~ .menu_list{
 display: block;
-
 }
-
-
-
-
 
 .menu_list{
 margin-top:0px;
- margin: auto;
-  width: 50%;
+margin-left:20%;
+  width: 80%;
 
 }
 
@@ -258,15 +295,11 @@ scale:1.1;
 	
 }
 
-#wylogujsie_przycisk:hover{
-	display:block;
-	
-}
-#logs:hover ~ #wylogujsie_przycisk{
-	display:block;
-	clear:both;
-	
-}
+
+
+
+
 
 }
+
 
