zmieniono:       classifierSimplified.py 	zmieniono:       main.py 	nowy plik:       static/boundssmp.ptk 	zmieniono:       static/network_simplified.ptk 	zmieniono:       templates/formularz.html 	usunięto:        templates/style.css 	nowy plik:       templates/wynik.html 	usunięto:        test.py

--- a/templates/formularz.html
+++ b/templates/formularz.html
@@ -20,8 +20,8 @@
 				<option value="4">4</option>
 				</select><br/>
 			Ból klatki w trakcie wysiłku<select id="f1_bolw" name="bolw">
-				<option value="1">Tak</option>
 				<option value="2">Nie</option>
+				<option value="1">Tak</option>
 				</select><br/>
 			Maksymalne tempo bicia serca w trakcie wysiłku [bpm]<input id="f1_bicieserca" type="number" min="1" name="bicieserca" /><br/>
 			Ciśnienie spoczynkowe - skurczowe [mmHg]<input id="f1_cisnienie"type="number" min="0" name="cisnienie" /><br/>
@@ -47,8 +47,53 @@
 					<option value="7">Ogólnie zaburzony przepływ krwi</option>
 				</select><br/>
 				<button type="submit" id="f1_submit" name="submit">Sprawdź</button>
-				<p>{{wynik}}</p>
 		</form>
+		
+		
+		<form action="form_simplified" method="post">
+			
+			Wiek: <input id="f2_wiek"type="number" min="1" name="wiek"/><br/>
+			Płeć: <select id="f2_plec" name="plec">
+				<option value="0">Mężczyzna</option>
+				<option value="1">Kobieta</option>
+			</select><br/>
+			Typ bólu klatki piersiowej: <select id="f2_bol" name="bol"><br/>
+				<option value="0">Brak</option>
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+				<option value="4">4</option>
+				</select><br/>
+			Ból klatki w trakcie wysiłku<select id="f2_bolw" name="bolw">
+				<option value="1">Tak</option>
+				<option value="2">Nie</option>
+				</select><br/>
+			Maksymalne tempo bicia serca w trakcie wysiłku [bpm]<select id="f2_bicieserca" name="bicieserca">
+					<option value="130">Obniżone</option>
+					<option value="160">W normie</option>
+					<option value="190">Podwyższone</option>
+				</select><br/>
+			Ciśnienie spoczynkowe - skurczowe [mmHg]<select id="f2_cisnienie" name="cisnienie">
+					<option value="95">Niskie</option>
+					<option value="105">Obniżone</option>
+					<option value="120">W normie</option>
+					<option value="140">Podwyższone</option>
+					<option value="160">Wysokie</option>
+					</select><br/>
+			Poziom cholesterolu całkowitego [mg/dl]<select id="f2_bicieserca" name="cholesterol">
+					<option value="120">Niski</option>
+					<option value="135">Obniżony</option>
+					<option value="155">W normie</option>
+					<option value="200">Podwyższony</option>
+					<option value="300">Wysoki</option>
+					</select><br/>
+			Poziom cukru we krwi na czczo:<select id="f2_cukier"name="cukier">
+				<option value="2">Obniżony</option>
+				<option value="1">Podwyższony</option>
+				</select><br/>
+				<button type="submit" id="f2_submit" name="submit">Sprawdź</button>
+		</form>
+		
 		
 	</body>
 </html>
