--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,4 @@
+html, body { height: 100% }
 *{
 margin:0;
 padding:0;
@@ -18,6 +19,7 @@ padding-bottom:8px;
 color:#cdcdcd;
 font-family:sans-serif;
 list-style-type:none;
+
 }
 
 #log{
@@ -187,7 +189,26 @@ background-color:tomato;
 	
 }
 
+.submenu{
+	display:none;
+}
+#wylog{
+	background-color:#272727;
+	width:170px;
+	margin-left:-10px;
+	font-weight:normal;
+	
+}
+#log:hover  .submenu{
+	display:block;
+	width:150px;clear:both;
+	background-color:272727;
+	margin-top:5px;
+	text-align:center;
+	width:190px; 
 
+
+}
 
 
 
@@ -196,6 +217,34 @@ background-color:tomato;
 
 
 @media screen and (min-width: 768px) {
+.submenu{
+	display:none;
+}
+#wylog{
+	background-color:#272727;
+	width:170px;
+	margin-left:-10px;
+	font-weight:normal;
+}
+#log:hover  .submenu{
+	display:block;
+	width:150px;clear:both;
+	background-color:272727;
+	margin-top:5px;
+	text-align:center;
+	width:190px; 
+
+
+}
+#log{
+	width:150px;
+	
+	
+}
+p{
+	color:tomato;
+}
+
 .navbar input{
 display: none;
 }
@@ -209,8 +258,8 @@ display: block;
 
 .menu_list{
 margin-top:0px;
- margin: auto;
-  width: 50%;
+margin-left:20%;
+  width: 80%;
 
 }
 
