zmieniono:       classifierExtended.py 	zmieniono:       classifierSimplified.py 	zmieniono:       main.py 	usunięto:        static/boundsext.ptk 	usunięto:        static/boundssmp.ptk 	zmieniono:       static/network_extended.ptk 	zmieniono:       static/network_simplified.ptk 	zmieniono:       templates/formularz.html 	zmieniono:       templates/wynik.html

--- a/templates/wynik.html
+++ b/templates/wynik.html
@@ -3,6 +3,7 @@
 		<meta charset="utf-8"/>
 	</head>
 	<body>
+		<a href="/">Główna</a>
 		<p>Test: {{test}}</p>
 		<table>
 			{{table|safe}}
@@ -15,5 +16,7 @@
 				{{msg|safe}}
 			</ul>
 		{% endif %}
+		
+		
 	</body>
 </html>
