--- a/templates/wynik.html
+++ b/templates/wynik.html
@@ -1,19 +1,96 @@
 <html>
-	<head>
-		<meta charset="utf-8"/>
-	</head>
-	<body>
-		<p>Test: {{test}}</p>
-		<table>
+<head>
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}"/>
+<style>
+*{
+margin:0;
+padding:0;
+}
+body{
+background-color:tomato;
+}
+a{
+text-decoration: none;
+list-style-type:none;
+}
+.menu_list{
+margin-top:20px;
+}
+.menu_list li{
+padding-top:8px;
+padding-bottom:8px;
+color:#cdcdcd;
+font-family:sans-serif;
+list-style-type:none;
+}
+</style>
+</head>
+<body>
+{% block content %}
+<div class="navbar"> 
+	<input type="checkbox" checked="unckecked" />   
+    <span> </span>
+    <span> </span>
+    <span> </span>
+    <ul class="menu_list">
+      <a href="/"><li>Strona glowna</li></a>
+      <a href="#"><li>Formularz</li></a>
+      <a href="#"><li>Wyniki</li></a>
+      <a href="#"><li>O nas</li></a>
+      {% if session['login'] %}
+	  <a href="#" id="logs"><li id="log"><p style="color:tomato;">{{session['login']}}</p><ul class="submenu">
+	  <a href="/wyloguj" id="wylogujsie_przycisk"><li id="wylog">Wyloguj się</li></a>
+	  </ul>	</li></a>  
+
+	  {% else %}
+	  <a href="/login"><li id="log">Zaloguj się</li></a>
+	  {% endif %}
+	</ul>
+
+  
+</div>
+<div class="content">
+
+
+
+
+
+		<table class="tabela_wynikow" id="tw1">
 			{{table|safe}}
 		</table>
 		{% if wynik !="Brak" %}
-		<p>Ryzyko wystąpienia choroby serca: {{wynik}}</p>
 		{% else	%}
-			<p>Niektóre z podanych danych są niestandardowe i nie znajdują odzwierciedlenia w danych testowych, co uniemożliwia otrzymanie rzetelnego wyniku. W przypadku rzeczywistego występowania takich wartości warto się bezzwłocznie skontaktować z lekarzem specjalistą </p>
-			<ul>
+			<p class="wyniki" style="color:tomato;">Niektóre z podanych danych są niestandardowe i nie znajdują odzwierciedlenia w danych testowych, co uniemożliwia otrzymanie rzetelnego wyniku. W przypadku rzeczywistego występowania takich wartości warto się bezzwłocznie skontaktować z lekarzem specjalistą.</p>
+			<ul class = "tabela_wynikow" style="margin-right:auto;margin-left:auto;">
 				{{msg|safe}}
 			</ul>
 		{% endif %}
-	</body>
+		
+		{% if session['login'] %}
+		<form action="/dodaj_wynik" method="post" class="dodwynikform">
+		
+		<p class="wyniki" style="color:#cdcdcd;">Tytuł: </p><input type="text" max="25" style="margin-left:10%;" name="tytul" required/>
+		
+		<p class="wyniki" style="color:#cdcdcd;">Opis: </p><textarea style="margin-left:10%;"maxlength="300"></textarea>
+		<button class="formularz_przycisk" type="submit" style="">Zapisz</button>
+		{% else %}
+		<p>Będąc <a href="/login">zalogowanym</a> możliwe jest zapisywanie otrzymanych rezultatów</p>
+		{% endif %}
+
+
+
+
+
+</div>
+
+<div class="footer">mikronapedy</div>
+{% endblock %}
+</body>
 </html>
+
+
+
+
+
+
+
